force-app/main/default/objects/Portal_Client_Credentials__mdt/Portal_Client_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>Portal Client Credentials</label>
    <pluralLabel>Portal Client Credentials</pluralLabel>
</CustomObject>