force-app/main/default/objects/Portal_Client_Credentials__mdt/fields/Authorize_URL__c.field-meta.xml
<CustomField>
    <fullName>Authorize_URL__c</fullName>
    <label>Authorize URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>