force-app/main/default/objects/Portal_Client_Credentials__mdt/fields/Target_URL__c.field-meta.xml
<CustomField>
    <fullName>Target_URL__c</fullName>
    <label>Target URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>