force-app/main/default/objects/Portal_Client_Credentials__mdt/fields/x_seg_clientid__c.field-meta.xml
<CustomField>
    <fullName>x_seg_clientid__c</fullName>
    <label>x-seg-clientid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>